# auto-slicer

./: README.md  config_template.json  pyproject.toml
auto_slicer/: __init__.py  cli.py  definitions.py  main.py  octopi_integration.py  slice.py  slice_stl.py  ui.py  util.py
auto_slicer/cad_integration/fusion360_scripts/: f360-export-components.py
auto_slicer/examples/: example.py  upload_existing_gcode.py  xyz-10mm-calibration-cube_0_6mmNoz_11m_0.20mm_205C_PLA_ENDER3BLTOUCH.gcode
slicer_profiles/: PrusaSlicer_config_bundle.ini
tests/: conftest.py  test_backend.py  test_definitions.py  test_octopi_integration.py  test_slice_stl.py  test_ui.py  test_util.py
tests/assets/chess_sign/: Black to move.gcode  Black to move.stl  White to move.gcode  White to move.stl  rim.gcode  rim.stl
