[tool.poetry]
name = "auto_slicer"
version = "0.1.0"
description = "Auto-Slicer automates the slicing of STEP or STL files and uploads Gcode to Octoprint."
authors = ["brucejiverson <brucejamesiverson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
octorest = "^0.4"
freesimplegui = "^5.1.0"
common_python_tools = { git = "git@github.com:brucejiverson/common_python_tools.git", rev = "main" }
# see scripts below for arc slicer

[tool.poetry.scripts]
install_custom_package = "pip install git+https://github.com/nicolai-wachenschwan/arc-overhang-prusaslicer-integration.git"
auto-slicer = "auto_slicer.main:main"

[tool.poetry.group.build.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.2"
pyright = "^1.1.384"
pytest-cov = "^6.0.0"
nbstripout = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
